2005-10-01  Erez Zadok  <ezk@cs.sunysb.edu>

	* include/am_defs.h: include <sys/statvfs.h> if it exists.

	* conf/nfs_prot/nfs_prot_netbsd1_4.h: NetBSD 3 has both statfs()
	and statvfs(), but the latter is preferred, so #define to use
	statvfs.

	* configure.in: check for statfs(), statvfs(), and
	<sys/statvfs.h>.

	* config.guess.long: strip trailing '.' on "netbsdelf3.0."
	(Beta).  Workaround for bug in config.guess.

	* config.{guess,sub}: update to latest versions.

2005-09-30  Christos Zoulas  <christos@zoulas.com>

	* fsinfo/fsi_util.c (set_ether_if): use INADDR_NONE instead of
	hard-coded value of -1.

	* include/amq_defs.h (AMQ_STRLEN): increase default size from 2KB
	to 16KB.  We can afford it these days.

	* libamu/strcasecmp.c (strcasecmp): use unsigned chars in
	tolower() to avoid sign/size promotion bugs.

	* libamu/xutil.c (switch_to_logfile): don't output to LOG_CONS by
	default (it's unfriendly).  If user really wants to, they can set
	it in /etc/syslog.conf.

2005-09-29  Erez Zadok  <ezk@cs.sunysb.edu>

	* amq/pawd.c (find_mt): if the auto mount type is used, pawd could
	go into an infinite loop since the mt_directory and mt_mountpoint
	fields are the same for auto mounts.  Solution: ignore type auto
	mounts, similar to toplvl.  Bug fix from Jonathan Chen
	<jon+amd@spock.org>.

	* README.attrcache: document test-attrcache script.

	* scripts/Makefile.am (noinst_SCRIPTS): build test-attrcache
	script.

	* configure.in: build scripts/test-attrcache script and chmod it
	so it can be executed in place.

	* scripts/test-attrcache.in: script to test the NFS attribute
	cache using Amd.

2005-09-26  Erez Zadok  <ezk@cs.sunysb.edu>

	* hlfsd/stubs.c (nfsproc_getattr_2_svc, nfsproc_lookup_2_svc,
	nfsproc_readlink_2_svc, nfsproc_readdir_2_svc), hlfsd/hlfsd.c
	(hlfsd_init): use new clocktime() function.

2005-09-18  Erez Zadok  <ezk@cs.sunysb.edu>

	* README.attrcache: document netbsd's patchs to support noac.
